# FOOD

./: Ingredient_Format.rcp  README.md  Recipe_Format.rcp  config.cfg
RobsSearchFunc/: CMakeLists.txt  Radditemdialog.cpp  Radditemdialog.h  Radditemdialog.ui  Rinventorymodel.h  Rmainwindow.cpp  Rmainwindow.h  Rrsearchwindow.cpp  RsearchFunc.pro  additemdialog.cpp  additemdialog.h  additemdialog.ui  inventorymodel.cpp  inventorymodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recipes.txt  rsearchwindow.cpp  rsearchwindow.h  rsearchwindow.ui  ui_mainwindow.h
ShoppingList/: RecipeParser.h  ShoppingListWidget.h  main.cpp  shoppingListTest.pro
error_handlers/: error.hpp
file_manager/: file_input.cpp  file_manager.hpp  file_output.cpp  file_tester.cpp  file_utils.cpp
header_implements/: emolder.commits.txt  error.cpp  file_manager.cpp  food.cpp  shoppinglistwidget.h
headers/: file_manager.hpp  food.hpp
recipe api/: ingredientfetch.py  ingredients.txt  recipefetch.py
recipeDisplay/: README.md  main.cpp
recipes and ingredients/: Apam balik.rcp  Apple & Blackberry Crumble.rcp  Apple Frangipan Tart.rcp  Aussie Burgers.rcp  Ayam Percik.rcp  BBQ Pork Sloppy Joes.rcp  Baba Ghanoush.rcp  Baingan Bharta.rcp  Baked salmon with fennel & tomatoes.rcp  Bakewell tart.rcp  Banana Pancakes.rcp  Barramundi with Moroccan spices.rcp  Battenberg Cake.rcp  Bean & Sausage Hotpot.rcp  BeaverTails.rcp  Beef Asado.rcp  Beef Banh Mi Bowls with Sriracha Mayo, Carrot & Pickled Cucumber.rcp  Beef Bourguignon.rcp  Beef Brisket Pot Roast.rcp  Beef Caldereta.rcp  Beef Dumpling Stew.rcp  Beef Lo Mein.rcp  Beef Mechado.rcp  (+297 more)
(+116 files in other folders)
